Fix CocktailList Sidebar styling  on Mobilee

--- a/src/Styles/CocktailList.css
+++ b/src/Styles/CocktailList.css
@@ -97,7 +97,7 @@ img.logo {
         align-items: center;
         justify-content: center;
         width: 100%;
-        height: 40%;
+        height: 45%;
         border-radius: 5px;
     }
     
